[feat]: as far as im aware, everything should be working now. added preprocessing step to the training model notebook

--- a/notebooks/02_data_wrangling.ipynb
+++ b/notebooks/02_data_wrangling.ipynb
@@ -9543,14 +9543,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "6b5ea5b5",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"../data/raw/depression_dataset.csv\")\n",
     "\n",
-    "def clean_data(df):\n",
+    "def clean_data(df, save_data=False):\n",
     "    # 1. Eliminar valores nulos\n",
     "    df = df.dropna()\n",
     "\n",
@@ -9611,14 +9611,15 @@
     "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.7, random_state=42)\n",
     "    X_test, X_val, y_test, y_val = train_test_split(X_test, y_test, test_size=0.66, random_state=42)\n",
     "\n",
-    "    # Guardar las variables \n",
-    "    X_train.to_csv(r'..\\data\\interim\\X_train.csv', index=False)\n",
-    "    X_test.to_csv(r'..\\data\\interim\\X_test.csv', index=False)\n",
-    "    X_val.to_csv(r'..\\data\\interim\\X_val.csv', index=False)\n",
-    "    \n",
-    "    y_train.to_csv(r'..\\data\\processed\\y_train.csv', index=False)\n",
-    "    y_test.to_csv(r'..\\data\\processed\\y_test.csv', index=False)\n",
-    "    y_val.to_csv(r'..\\data\\processed\\y_val.csv', index=False)\n",
+    "    if save_data:\n",
+    "        # Guardar las variables \n",
+    "        X_train.to_csv(r'..\\data\\interim\\X_train.csv', index=False)\n",
+    "        X_test.to_csv(r'..\\data\\interim\\X_test.csv', index=False)\n",
+    "        X_val.to_csv(r'..\\data\\interim\\X_val.csv', index=False)\n",
+    "        \n",
+    "        y_train.to_csv(r'..\\data\\processed\\y_train.csv', index=False)\n",
+    "        y_test.to_csv(r'..\\data\\processed\\y_test.csv', index=False)\n",
+    "        y_val.to_csv(r'..\\data\\processed\\y_val.csv', index=False)\n",
     "    \n",
     "    # Convertir las variables dependientes en NumPy arrays\n",
     "    y_train = y_train.to_numpy().ravel()\n",
@@ -9630,12 +9631,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "da8c090a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocessor(X_train, X_test, X_val):\n",
+    "def preprocessor(X_train, X_test, X_val, save_data=False):\n",
     "    # Codificar variables múltiples mediante One-Hot\n",
     "    encoder = OneHotEncoder(\n",
     "        drop='first',\n",
@@ -9675,36 +9676,37 @@
     "    X_test_scaled = scaler.transform(X_test_final)\n",
     "    X_val_scaled = scaler.transform(X_val_final)\n",
     "\n",
-    "    # Regresar los datos a dataframe y guardarlos\n",
-    "    X_train_df = pd.DataFrame(X_train_scaled, columns=X_train_final.columns, index=X_train_final.index)\n",
-    "    X_test_df = pd.DataFrame(X_test_scaled, columns=X_test_final.columns, index=X_test_final.index)\n",
-    "    X_val_df = pd.DataFrame(X_val_scaled, columns=X_val_final.columns, index=X_val_final.index)\n",
+    "    if save_data:\n",
+    "        # Regresar los datos a dataframe y guardarlos\n",
+    "        X_train_df = pd.DataFrame(X_train_scaled, columns=X_train_final.columns, index=X_train_final.index)\n",
+    "        X_test_df = pd.DataFrame(X_test_scaled, columns=X_test_final.columns, index=X_test_final.index)\n",
+    "        X_val_df = pd.DataFrame(X_val_scaled, columns=X_val_final.columns, index=X_val_final.index)\n",
     "\n",
-    "    X_train_df.to_csv(r'..\\data\\processed\\X_train.csv', index=False)\n",
-    "    X_test_df.to_csv(r'..\\data\\processed\\X_test.csv', index=False)\n",
-    "    X_val_df.to_csv(r'..\\data\\processed\\X_val.csv', index=False)\n",
+    "        X_train_df.to_csv(r'..\\data\\processed\\X_train.csv', index=False)\n",
+    "        X_test_df.to_csv(r'..\\data\\processed\\X_test.csv', index=False)\n",
+    "        X_val_df.to_csv(r'..\\data\\processed\\X_val.csv', index=False)\n",
     "\n",
     "    return X_train_scaled, X_test_scaled, X_val_scaled, encoder, scaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "79b896c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, X_val, y_train, y_test, y_val = clean_data(df)"
+    "X_train, X_test, X_val, y_train, y_test, y_val = clean_data(df, save_data=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "ede7ce9e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, X_val, encoder, scaler = preprocessor(X_train, X_test, X_val)"
+    "X_train, X_test, X_val, encoder, scaler = preprocessor(X_train, X_test, X_val, save_data=True)"
    ]
   },
   {
