--- a/notebooks/03_training_model.ipynb
+++ b/notebooks/03_training_model.ipynb
@@ -19,6 +19,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "76bbc203",
+   "metadata": {},
+   "source": [
+    "# <font color= #bbc28d>*Datos y Data Readiness* </font>\n",
+    "En esta etapa se siguió trabajando con la misma base de datos la cuál intenta clasificar a los jóvenes estudiantes en dos categorías: aquellos que presentan síntomas de depresión y aquellos que no, siendo esta columna nuestro objetivo. Aplicando diferentes transformaciones y limpiezas para preparar los datos antes del modelado. Las acciones principales fueron:\n",
+    "\n",
+    "#### <font color=#99c0c4>1. *Tratamiento de datos faltantes* </font>\n",
+    "- Se detectó que la columna Financial Stress contenía 3 valores nulos.\n",
+    "- Dado que era una cantidad pequeña en comparación con el total de registros, se decidió eliminar esas filas.\n",
+    "\n",
+    "#### <font color=#99c0c4>2. *Filtrado de datos categóricos* </font>\n",
+    "- Se identificaron variables con categorías poco representativas (con una o dos filas por valor), como City, Dietary Habits, Sleep Duration y Degree.\n",
+    "- Se eliminaron registros aislados para reducir ruido y mejorar la representatividad de los datos.\n",
+    "\n",
+    "#### <font color=#99c0c4>3. *Ajuste del dataset al enfoque del proyecto* </font>\n",
+    "- Se filtraron los registros de Age para conservar"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "3bd9446a",
@@ -56,26 +76,6 @@
     "\n",
     "# Evaluation Metrics\n",
     "from sklearn.metrics import accuracy_score, precision_score, f1_score, recall_score"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "76bbc203",
-   "metadata": {},
-   "source": [
-    "# <font color= #bbc28d>*Datos y Data Readiness* </font>\n",
-    "En esta etapa se siguió trabajando con la misma base de datos la cuál intenta clasificiar a los jóvenes estudiantes en dos categorías: aquellos que presentan síntomas de depresión y auqellos que no, siendo esta columna nuestro objetivo. Aplicando diferentes transformaciones y limpiezas para preparar los datos antes del modelado. Las acciones principales fueron:\n",
-    "\n",
-    "#### <font color=#99c0c4>1. *Tratamiento de datos faltantes* </font>\n",
-    "- Se detectó que la columna Financial Stress contenía 3 valores nulos.\n",
-    "- Dado que era una cantidad pequeña en comparación con el total de registros, se decidió eliminar esas filas.\n",
-    "\n",
-    "#### <font color=#99c0c4>2. *Filtrado de datos categóricos* </font>\n",
-    "- Se identificaron variables con categorías poco representativas (con una o dos filas por valor), como City, Dietary Habits, Sleep Duration y Degree.\n",
-    "- Se eliminaron registros aislados para reducir ruido y mejorar la representatividad de los datos.\n",
-    "\n",
-    "#### <font color=#99c0c4>3. *Ajuste del dataset al enfoque del proyecto* </font>\n",
-    "- Se filtraron los registros de Age para conservar"
    ]
   },
   {
@@ -149,7 +149,184 @@
    "id": "734d7a22",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv(\"../data/raw/depression_dataset.csv\")\n",
+    "\n",
+    "def clean_data(df, save_data=False):\n",
+    "    # 1. Eliminar valores nulos\n",
+    "    df = df.dropna()\n",
+    "\n",
+    "\n",
+    "    # 2. Filtrado de categorías que otorgan poca información debido a su baja prevalencia\n",
+    "    # City\n",
+    "    ciudades = df['City'].value_counts()[df['City'].value_counts() < 450]\n",
+    "    df = df[~df['City'].isin(ciudades.index)]\n",
+    "    # Dietary Habits\n",
+    "    df = df[df['Dietary Habits'] != 'Others']\n",
+    "    # Sleep Duration\n",
+    "    df = df[df['Sleep Duration'] != 'Others']\n",
+    "    # Degree\n",
+    "    df = df[df['Degree'] != 'Others']\n",
+    "    # Age\n",
+    "    df = df[df['Age'] <= 35]\n",
+    "    # Academic Pressure\n",
+    "    df = df[df['Academic Pressure'] > 0]\n",
+    "    # Study Satisfaction\n",
+    "    df = df[df['Study Satisfaction'] > 0]\n",
+    "\n",
+    "    # 3. Eliminar variables que no son buenas predictoras\n",
+    "    df.drop(columns=['Work Pressure', 'Profession', 'Job Satisfaction', 'id'], axis=1, inplace=True)\n",
+    "\n",
+    "\n",
+    "    # 4. Mapear las variables categóricas binarias\n",
+    "    gender = {'Male' : 0, 'Female' : 1}\n",
+    "    general = {'Yes' : 1, 'No' : 0}\n",
+    "    df['Gender'] = df['Gender'].map(gender)\n",
+    "    df['Have you ever had suicidal thoughts ?'] = df['Have you ever had suicidal thoughts ?'].map(general)\n",
+    "    df['Family History of Mental Illness'] = df['Family History of Mental Illness'].map(general)\n",
+    "\n",
+    "\n",
+    "    # 5. Mapear las variables categóricas múltiples\n",
+    "    degree = {\n",
+    "    \"Class 12\": \"Secondary\",\n",
+    "    \"B.Pharm\": \"Undergraduate\", \"BSc\": \"Undergraduate\", \"BA\": \"Undergraduate\", \"BCA\": \"Undergraduate\",\n",
+    "    \"B.Ed\": \"Undergraduate\", \"LLB\": \"Undergraduate\", \"BE\": \"Undergraduate\", \"BHM\": \"Undergraduate\",\n",
+    "    \"B.Com\": \"Undergraduate\", \"B.Arch\": \"Undergraduate\", \"B.Tech\": \"Undergraduate\", \"BBA\": \"Undergraduate\",\n",
+    "    \"M.Tech\": \"Postgraduate\", \"M.Ed\": \"Postgraduate\", \"MSc\": \"Postgraduate\", \"M.Pharm\": \"Postgraduate\",\n",
+    "    \"MCA\": \"Postgraduate\", \"MA\": \"Postgraduate\", \"MBA\": \"Postgraduate\", \"M.Com\": \"Postgraduate\", \"MHM\": \"Postgraduate\",\n",
+    "    \"PhD\": \"Doctorate\", \"MD\": \"Doctorate\", \"MBBS\": \"Doctorate\", \"LLM\": \"Doctorate\", \"ME\": \"Postgraduate\"\n",
+    "    }\n",
+    "    orden_degree = {\"Secondary\": 0, \"Undergraduate\": 1, \"Postgraduate\": 2, \"Doctorate\": 3}\n",
+    "    orden_alimentos = {'Healthy': 0, 'Unhealthy': 1, 'Moderate': 2}\n",
+    "    orden_siesta = {'Less than 5 hours': 0, '5-6 hours': 1, '7-8 hours': 2,'More than 8 hours': 3}\n",
+    "    # Aplicar el mapeo\n",
+    "    df['Degree'] = df['Degree'].map(degree)\n",
+    "    df['Degree'] = df['Degree'].map(orden_degree)\n",
+    "    df['Dietary Habits'] = df['Dietary Habits'].map(orden_alimentos)\n",
+    "    df['Sleep Duration'] = df['Sleep Duration'].map(orden_siesta)\n",
+    "\n",
+    "\n",
+    "    # 6. Train-Test-Val Split (70-20-10)\n",
+    "    X = df.drop(['Depression'], axis=1)\n",
+    "    y = df['Depression']\n",
+    "\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.7, random_state=42)\n",
+    "    X_test, X_val, y_test, y_val = train_test_split(X_test, y_test, test_size=0.66, random_state=42)\n",
+    "\n",
+    "    if save_data:\n",
+    "        # Guardar las variables \n",
+    "        X_train.to_csv(r'..\\data\\interim\\X_train.csv', index=False)\n",
+    "        X_test.to_csv(r'..\\data\\interim\\X_test.csv', index=False)\n",
+    "        X_val.to_csv(r'..\\data\\interim\\X_val.csv', index=False)\n",
+    "        \n",
+    "        y_train.to_csv(r'..\\data\\processed\\y_train.csv', index=False)\n",
+    "        y_test.to_csv(r'..\\data\\processed\\y_test.csv', index=False)\n",
+    "        y_val.to_csv(r'..\\data\\processed\\y_val.csv', index=False)\n",
+    "    \n",
+    "    # Convertir las variables dependientes en NumPy arrays\n",
+    "    y_train = y_train.to_numpy().ravel()\n",
+    "    y_test = y_test.to_numpy().ravel()\n",
+    "    y_val = y_val.to_numpy().ravel()   \n",
+    "\n",
+    "    return X_train, X_test, X_val, y_train, y_test, y_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e76bceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocessor(X_train, X_test, X_val, save_data=False):\n",
+    "    # Codificar variables múltiples mediante One-Hot\n",
+    "    encoder = OneHotEncoder(\n",
+    "        drop='first',\n",
+    "        handle_unknown='ignore',        # Evita error si aparece algo nuevo\n",
+    "        sparse_output=False\n",
+    "    )\n",
+    "\n",
+    "    # Entrenar el objeto con los datos del train\n",
+    "    encoder.fit(X_train[['City']])\n",
+    "    \n",
+    "    # Aplicar One-Hot\n",
+    "    X_train_city = encoder.transform(X_train[['City']])\n",
+    "    X_test_city = encoder.transform(X_test[['City']])\n",
+    "    X_val_city = encoder.transform(X_val[['City']])\n",
+    "    \n",
+    "    # Obtener los nombres del One-Hot\n",
+    "    city_cols = encoder.get_feature_names_out(['City'])  # Nombres automáticos de columnas\n",
+    "    \n",
+    "    # Crear un df con las columnas codificadas\n",
+    "    X_train_city_df = pd.DataFrame(X_train_city, columns=city_cols, index=X_train.index)\n",
+    "    X_test_city_df = pd.DataFrame(X_test_city, columns=city_cols, index=X_test.index)\n",
+    "    X_val_city_df = pd.DataFrame(X_val_city, columns=city_cols, index=X_val.index)\n",
+    "    \n",
+    "    # Eliminar la columna original en el dataset\n",
+    "    X_train = X_train.drop(columns=['City'])\n",
+    "    X_test = X_test.drop(columns=['City'])\n",
+    "    X_val = X_val.drop(columns=['City'])\n",
+    "    \n",
+    "    # Juntar las nuevas columnas con el dataset antiguo\n",
+    "    X_train_final = pd.concat([X_train, X_train_city_df], axis=1)\n",
+    "    X_test_final = pd.concat([X_test, X_test_city_df], axis=1)\n",
+    "    X_val_final = pd.concat([X_val, X_val_city_df], axis=1)\n",
+    "\n",
+    "    # Aplicar una estandarización a los datos\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_scaled = scaler.fit_transform(X_train_final)\n",
+    "    X_test_scaled = scaler.transform(X_test_final)\n",
+    "    X_val_scaled = scaler.transform(X_val_final)\n",
+    "\n",
+    "    if save_data:\n",
+    "        # Regresar los datos a dataframe y guardarlos\n",
+    "        X_train_df = pd.DataFrame(X_train_scaled, columns=X_train_final.columns, index=X_train_final.index)\n",
+    "        X_test_df = pd.DataFrame(X_test_scaled, columns=X_test_final.columns, index=X_test_final.index)\n",
+    "        X_val_df = pd.DataFrame(X_val_scaled, columns=X_val_final.columns, index=X_val_final.index)\n",
+    "\n",
+    "        X_train_df.to_csv(r'..\\data\\processed\\X_train.csv', index=False)\n",
+    "        X_test_df.to_csv(r'..\\data\\processed\\X_test.csv', index=False)\n",
+    "        X_val_df.to_csv(r'..\\data\\processed\\X_val.csv', index=False)\n",
+    "\n",
+    "    return X_train_scaled, X_test_scaled, X_val_scaled, encoder, scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "55425de7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clean the data and obtain the targets\n",
+    "X_train, X_test, X_val, y_train, y_test, y_val = clean_data(df)\n",
+    "\n",
+    "# Preprocess the data and obtain the features and artifacts\n",
+    "X_train, X_test, X_val, encoder, scaler = preprocessor(X_train, X_test, X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a1fc299f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<mlflow.data.numpy_dataset.NumpyDataset at 0x1b65c81fb90>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.data.from_numpy(X_train, targets=y_train, name=\"depression_train\")\n",
+    "mlflow.data.from_numpy(X_test, targets=y_test, name=\"depression_test\")\n",
+    "mlflow.data.from_numpy(X_val, targets=y_val, name=\"depression_val\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,13 +363,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hp_tuning_lr(X_train, X_test, Y_train, Y_test):\n",
+    "def hp_tuning_lr(X_train, X_test, y_train, y_test):\n",
     "\n",
     "    mlflow.sklearn.autolog()\n",
-    "\n",
-    "    training_dataset = mlflow.data.from_numpy(X_train, targets=Y_train, name='Train Data')\n",
-    "    validation_dataset = mlflow.data.from_numpy(X_test, targets=Y_test, name='Test Data')\n",
-    "\n",
     "\n",
     "    def objective_lr(trial: optuna.trial.Trial):\n",
     "        params = {\n",
@@ -205,13 +378,13 @@
     "            mlflow.log_params(params)\n",
     "\n",
     "            lr_model = LogisticRegression(**params)\n",
-    "            lr_model.fit(X_train, Y_train)\n",
+    "            lr_model.fit(X_train, y_train)\n",
     "\n",
     "            y_pred = lr_model.predict(X_test)\n",
-    "            acc = accuracy_score(Y_test, y_pred)\n",
-    "            precision = precision_score(Y_test, y_pred)\n",
-    "            f1 = f1_score(Y_test, y_pred)\n",
-    "            recall = recall_score(Y_test, y_pred)\n",
+    "            acc = accuracy_score(y_test, y_pred)\n",
+    "            precision = precision_score(y_test, y_pred)\n",
+    "            f1 = f1_score(y_test, y_pred)\n",
+    "            recall = recall_score(y_test, y_pred)\n",
     "\n",
     "            mlflow.log_metric('acc', acc)\n",
     "            mlflow.log_metric('precision', precision)\n",
@@ -258,10 +431,6 @@
     "def hp_tuning_svc(X_train, X_test, Y_train, Y_test):\n",
     "\n",
     "    mlflow.sklearn.autolog()\n",
-    "\n",
-    "    training_dataset = mlflow.data.from_numpy(X_train, targets=Y_train, name='Train Data')\n",
-    "    validation_dataset = mlflow.data.from_numpy(X_test, targets=Y_test, name='Test Data')\n",
-    "\n",
     "\n",
     "    def objective_svc(trial: optuna.trial.Trial):\n",
     "        params = {\n",
@@ -329,10 +498,6 @@
     "def hp_tuning_xgboost(X_train, X_test, Y_train, Y_test):\n",
     "    # Habilitar autolog\n",
     "    mlflow.xgboost.autolog()\n",
-    "\n",
-    "    # Crear datasets de entrenamiento y validación para MLflow\n",
-    "    training_dataset = mlflow.data.from_numpy(X_train, targets=Y_train, name='Train Data')\n",
-    "    validation_dataset = mlflow.data.from_numpy(X_test, targets=Y_test, name='Test Data')\n",
     "\n",
     "    # Función objetivo para Optuna\n",
     "    def objective_xgb(trial: optuna.trial.Trial):\n",
