--- a/notebooks/03_training_model.ipynb
+++ b/notebooks/03_training_model.ipynb
@@ -23,27 +23,36 @@
    "id": "76bbc203",
    "metadata": {},
    "source": [
-    "# <font color= #bbc28d>*Datos y Data Readiness* </font>\n",
+    "# <font color= #bbc28d>**Datos y Data Readiness** </font>\n",
     "En esta etapa se siguió trabajando con la misma base de datos la cuál intenta clasificar a los jóvenes estudiantes en dos categorías: aquellos que presentan síntomas de depresión y aquellos que no, siendo esta columna nuestro objetivo. Aplicando diferentes transformaciones y limpiezas para preparar los datos antes del modelado. Las acciones principales fueron:\n",
     "\n",
-    "#### <font color=#99c0c4>1. *Tratamiento de datos faltantes* </font>\n",
+    "#### <font color=#99c0c4>1. **Tratamiento de datos faltantes** </font>\n",
     "- Se detectó que la columna Financial Stress contenía 3 valores nulos.\n",
     "- Dado que era una cantidad pequeña en comparación con el total de registros, se decidió eliminar esas filas.\n",
     "\n",
-    "#### <font color=#99c0c4>2. *Filtrado de datos categóricos* </font>\n",
+    "#### <font color=#99c0c4>2. **Filtrado de datos categóricos** </font>\n",
     "- Se identificaron variables con categorías poco representativas (con una o dos filas por valor), como City, Dietary Habits, Sleep Duration y Degree.\n",
     "- Se eliminaron registros aislados para reducir ruido y mejorar la representatividad de los datos.\n",
     "\n",
-    "#### <font color=#99c0c4>3. *Ajuste del dataset al enfoque del proyecto* </font>\n",
+    "#### <font color=#99c0c4>3. **Ajuste del dataset al enfoque del proyecto** </font>\n",
     "- Se filtraron los registros de Age para conservar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3bd9446a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Vivienne\\apps\\data_science_project\\Depression_Classification\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# General Libraries\n",
     "import os\n",
@@ -145,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "734d7a22",
    "metadata": {},
    "outputs": [],
@@ -238,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocessor(X_train, X_test, X_val, save_data=False):\n",
+    "def preprocessor(X_train, X_test, X_val=None, save_data=False, save_artifacts=True):\n",
     "    # Codificar variables múltiples mediante One-Hot\n",
     "    encoder = OneHotEncoder(\n",
     "        drop='first',\n",
@@ -252,7 +261,7 @@
     "    # Aplicar One-Hot\n",
     "    X_train_city = encoder.transform(X_train[['City']])\n",
     "    X_test_city = encoder.transform(X_test[['City']])\n",
-    "    X_val_city = encoder.transform(X_val[['City']])\n",
+    "    X_val_city = encoder.transform(X_val[['City']]) if X_val is not None else None\n",
     "    \n",
     "    # Obtener los nombres del One-Hot\n",
     "    city_cols = encoder.get_feature_names_out(['City'])  # Nombres automáticos de columnas\n",
@@ -260,29 +269,46 @@
     "    # Crear un df con las columnas codificadas\n",
     "    X_train_city_df = pd.DataFrame(X_train_city, columns=city_cols, index=X_train.index)\n",
     "    X_test_city_df = pd.DataFrame(X_test_city, columns=city_cols, index=X_test.index)\n",
-    "    X_val_city_df = pd.DataFrame(X_val_city, columns=city_cols, index=X_val.index)\n",
+    "    X_val_city_df = pd.DataFrame(X_val_city, columns=city_cols, index=X_val.index) if X_val is not None else None\n",
     "    \n",
     "    # Eliminar la columna original en el dataset\n",
     "    X_train = X_train.drop(columns=['City'])\n",
     "    X_test = X_test.drop(columns=['City'])\n",
-    "    X_val = X_val.drop(columns=['City'])\n",
+    "    X_val = X_val.drop(columns=['City']) if X_val is not None else None\n",
     "    \n",
     "    # Juntar las nuevas columnas con el dataset antiguo\n",
     "    X_train_final = pd.concat([X_train, X_train_city_df], axis=1)\n",
     "    X_test_final = pd.concat([X_test, X_test_city_df], axis=1)\n",
-    "    X_val_final = pd.concat([X_val, X_val_city_df], axis=1)\n",
+    "    X_val_final = pd.concat([X_val, X_val_city_df], axis=1) if X_val is not None else None\n",
     "\n",
     "    # Aplicar una estandarización a los datos\n",
     "    scaler = StandardScaler()\n",
     "    X_train_scaled = scaler.fit_transform(X_train_final)\n",
     "    X_test_scaled = scaler.transform(X_test_final)\n",
-    "    X_val_scaled = scaler.transform(X_val_final)\n",
+    "    X_val_scaled = scaler.transform(X_val_final) if X_val is not None else None\n",
+    "\n",
+    "    # Guardar los artefactos\n",
+    "    if save_artifacts:\n",
+    "        os.makedirs(\"artifacts/preprocessor\", exist_ok=True)\n",
+    "\n",
+    "        # Save encoder\n",
+    "        with open('artifacts/preprocessor/encoder.pkl', 'wb') as f_out:\n",
+    "            pickle.dump(encoder, f_out)\n",
+    "        # Save scaler\n",
+    "        with open('artifacts/preprocessor/scaler.pkl', 'wb') as f_out:\n",
+    "            pickle.dump(scaler, f_out)\n",
+    "\n",
+    "        # Log artifacts to MLflow\n",
+    "        mlflow.log_artifact(\"artifacts/preprocessor/encoder.pkl\", artifact_path=\"preprocessor\")\n",
+    "        mlflow.log_artifact(\"artifacts/preprocessor/scaler.pkl\", artifact_path=\"preprocessor\")\n",
+    "\n",
+    "        print(\"Preprocessor artifacts (encoder & scaler) successfully logged to MLflow.\")\n",
     "\n",
     "    if save_data:\n",
     "        # Regresar los datos a dataframe y guardarlos\n",
     "        X_train_df = pd.DataFrame(X_train_scaled, columns=X_train_final.columns, index=X_train_final.index)\n",
     "        X_test_df = pd.DataFrame(X_test_scaled, columns=X_test_final.columns, index=X_test_final.index)\n",
-    "        X_val_df = pd.DataFrame(X_val_scaled, columns=X_val_final.columns, index=X_val_final.index)\n",
+    "        X_val_df = pd.DataFrame(X_val_scaled, columns=X_val_final.columns, index=X_val_final.index) if X_val is not None else None\n",
     "\n",
     "        X_train_df.to_csv(r'..\\data\\processed\\X_train.csv', index=False)\n",
     "        X_test_df.to_csv(r'..\\data\\processed\\X_test.csv', index=False)\n",
@@ -293,36 +319,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "55425de7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Clean the data and obtain the targets\n",
-    "X_train, X_test, X_val, y_train, y_test, y_val = clean_data(df)\n",
-    "\n",
-    "# Preprocess the data and obtain the features and artifacts\n",
-    "X_train, X_test, X_val, encoder, scaler = preprocessor(X_train, X_test, X_val)"
+    "X_train, X_test, X_val, y_train, y_test, y_val = clean_data(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "a1fc299f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<mlflow.data.numpy_dataset.NumpyDataset at 0x1b65c81fb90>"
+       "<mlflow.data.numpy_dataset.NumpyDataset at 0x1c1b9267750>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Subir los datos a MLflow\n",
     "mlflow.data.from_numpy(X_train, targets=y_train, name=\"depression_train\")\n",
     "mlflow.data.from_numpy(X_test, targets=y_test, name=\"depression_test\")\n",
     "mlflow.data.from_numpy(X_val, targets=y_val, name=\"depression_val\")"
@@ -367,6 +391,13 @@
     "\n",
     "    mlflow.sklearn.autolog()\n",
     "\n",
+    "    # Preprocess data and log artifacts\n",
+    "    X_train_scaled, X_test_scaled, _, encoder, scaler = preprocessor(X_train, X_test, X_val=None, save_artifacts=True)\n",
+    "\n",
+    "    # Get MLflow ID to store the preprocessing artifacts\n",
+    "    preprocessor_run_id = mlflow.active_run().info.run_id\n",
+    "\n",
+    "    # Start Optuna and MLflow\n",
     "    def objective_lr(trial: optuna.trial.Trial):\n",
     "        params = {\n",
     "            'penalty': trial.suggest_categorical('penalty', ['l2','l1','elasticnet']),\n",
@@ -376,27 +407,31 @@
     "        with mlflow.start_run(nested=True):\n",
     "            mlflow.set_tag('model_family', 'logistic_regression')\n",
     "            mlflow.log_params(params)\n",
+    "            mlflow.log_param('preprocessor_run_id', preprocessor_run_id)\n",
     "\n",
     "            lr_model = LogisticRegression(**params)\n",
-    "            lr_model.fit(X_train, y_train)\n",
+    "            lr_model.fit(X_train_scaled, y_train)\n",
     "\n",
-    "            y_pred = lr_model.predict(X_test)\n",
+    "            # Get predictions and metrics\n",
+    "            y_pred = lr_model.predict(X_test_scaled)\n",
     "            acc = accuracy_score(y_test, y_pred)\n",
     "            precision = precision_score(y_test, y_pred)\n",
     "            f1 = f1_score(y_test, y_pred)\n",
     "            recall = recall_score(y_test, y_pred)\n",
     "\n",
+    "            # Log metrics\n",
     "            mlflow.log_metric('acc', acc)\n",
     "            mlflow.log_metric('precision', precision)\n",
     "            mlflow.log_metric('f1', f1)\n",
     "            mlflow.log_metric('recall', recall)\n",
     "\n",
-    "            signature = infer_signature(X_test, y_pred)\n",
+    "            signature = infer_signature(X_test_scaled, y_pred)\n",
     "\n",
+    "            # Log the trained model\n",
     "            mlflow.sklearn.log_model(\n",
     "                lr_model,\n",
     "                name='lr_model',\n",
-    "                input_example=X_test[:5],\n",
+    "                input_example=X_test_scaled[:5],\n",
     "                signature=signature\n",
     "            )\n",
     "        \n",
@@ -405,7 +440,7 @@
     "    sampler = TPESampler(seed=42)\n",
     "    lr_study = optuna.create_study(direction='maximize', sampler=sampler)\n",
     "\n",
-    "    with mlflow.start_run(run_name='Logisitc Regression (Optuna)', nested=True):\n",
+    "    with mlflow.start_run(run_name='Logistic Regression (Optuna)', nested=True):\n",
     "        lr_study.optimize(objective_lr, n_trials=2)\n",
     "    \n",
     "    best_params_lr = lr_study.best_params\n",
