[feat]:  training should be done o7

--- a/notebooks/03_training_model.ipynb
+++ b/notebooks/03_training_model.ipynb
@@ -463,9 +463,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hp_tuning_svc(X_train, X_test, Y_train, Y_test):\n",
+    "def hp_tuning_svc(X_train, X_test, y_train, y_test):\n",
     "\n",
     "    mlflow.sklearn.autolog()\n",
+    "\n",
+    "    # Preprocess data and log artifacts\n",
+    "    X_train_scaled, X_test_scaled, _, encoder, scaler = preprocessor(X_train, X_test, X_val=None, save_artifacts=True)\n",
+    "\n",
+    "    # Get MLflow ID to store the preprocessing artifacts\n",
+    "    preprocessor_run_id = mlflow.active_run().info.run_id\n",
     "\n",
     "    def objective_svc(trial: optuna.trial.Trial):\n",
     "        params = {\n",
@@ -475,27 +481,28 @@
     "        with mlflow.start_run(nested=True):\n",
     "            mlflow.set_tag('model_family', 'svc')\n",
     "            mlflow.log_params(params)\n",
+    "            mlflow.log_param('preprocessor_run_id', preprocessor_run_id)\n",
     "\n",
     "            svc_model = SVC(**params)\n",
-    "            svc_model.fit(X_train, Y_train)\n",
+    "            svc_model.fit(X_train_scaled, y_train)\n",
     "\n",
-    "            y_pred = svc_model.predict(X_test)\n",
-    "            acc = accuracy_score(Y_test, y_pred)\n",
-    "            precision = precision_score(Y_test, y_pred)\n",
-    "            f1 = f1_score(Y_test, y_pred)\n",
-    "            recall = recall_score(Y_test, y_pred)\n",
+    "            y_pred = svc_model.predict(X_test_scaled)\n",
+    "            acc = accuracy_score(y_test, y_pred)\n",
+    "            precision = precision_score(y_test, y_pred)\n",
+    "            f1 = f1_score(y_test, y_pred)\n",
+    "            recall = recall_score(y_test, y_pred)\n",
     "\n",
     "            mlflow.log_metric('acc', acc)\n",
     "            mlflow.log_metric('precision', precision)\n",
     "            mlflow.log_metric('f1', f1)\n",
     "            mlflow.log_metric('recall', recall)\n",
     "\n",
-    "            signature = infer_signature(X_test, y_pred)\n",
+    "            signature = infer_signature(X_test_scaled, y_pred)\n",
     "\n",
     "            mlflow.sklearn.log_model(\n",
     "                svc_model,\n",
     "                name='svc_model',\n",
-    "                input_example=X_test[:5],\n",
+    "                input_example=X_test_scaled[:5],\n",
     "                signature=signature\n",
     "            )\n",
     "        \n",
@@ -530,9 +537,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def hp_tuning_xgboost(X_train, X_test, Y_train, Y_test):\n",
+    "def hp_tuning_xgboost(X_train, X_test, y_train, y_test):\n",
     "    # Habilitar autolog\n",
     "    mlflow.xgboost.autolog()\n",
+    "\n",
+    "    # Preprocess data and log artifacts\n",
+    "    X_train_scaled, X_test_scaled, _, encoder, scaler = preprocessor(X_train, X_test, X_val=None, save_artifacts=True)\n",
+    "\n",
+    "    # Get MLflow ID to store the preprocessing artifacts\n",
+    "    preprocessor_run_id = mlflow.active_run().info.run_id\n",
+    "\n",
+    "    # Preprocess data and log artifacts\n",
+    "    X_train_scaled, X_test_scaled, _, encoder, scaler = preprocessor(X_train, X_test, X_val=None, save_artifacts=True)\n",
+    "\n",
+    "    # Get MLflow ID to store the preprocessing artifacts\n",
+    "    preprocessor_run_id = mlflow.active_run().info.run_id\n",
     "\n",
     "    # Función objetivo para Optuna\n",
     "    def objective_xgb(trial: optuna.trial.Trial):\n",
@@ -547,27 +566,28 @@
     "        with mlflow.start_run(nested=True):\n",
     "            mlflow.set_tag('model_family', 'Xgboost')\n",
     "            mlflow.log_params(params)\n",
+    "            mlflow.log_param('preprocessor_run_id', preprocessor_run_id)\n",
     "\n",
     "            xgb_model = XGBClassifier(**params)\n",
-    "            xgb_model.fit(X_train, Y_train)\n",
+    "            xgb_model.fit(X_train_scaled, y_train)\n",
     "\n",
-    "            y_pred = xgb_model.predict(X_test)\n",
-    "            acc = accuracy_score(Y_test, y_pred)\n",
-    "            precision = precision_score(Y_test, y_pred)\n",
-    "            f1 = f1_score(Y_test, y_pred)\n",
-    "            recall = recall_score(Y_test, y_pred)\n",
+    "            y_pred = xgb_model.predict(X_test_scaled)\n",
+    "            acc = accuracy_score(y_test, y_pred)\n",
+    "            precision = precision_score(y_test, y_pred)\n",
+    "            f1 = f1_score(y_test, y_pred)\n",
+    "            recall = recall_score(y_test, y_pred)\n",
     "\n",
     "            mlflow.log_metric('acc', acc)\n",
     "            mlflow.log_metric('precision', precision)\n",
     "            mlflow.log_metric('f1', f1)\n",
     "            mlflow.log_metric('recall', recall)\n",
     "\n",
-    "            signature = infer_signature(X_test, y_pred)\n",
+    "            signature = infer_signature(X_test_scaled, y_pred)\n",
     "\n",
     "            mlflow.xgboost.log_model(\n",
     "                xgb_model,\n",
     "                artifact_path='xgboost_model',\n",
-    "                input_example=X_test[:5],\n",
+    "                input_example=X_test_scaled[:5],\n",
     "                signature=signature\n",
     "            )\n",
     "        \n",
@@ -603,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_best_models(X_train, Y_train, X_test, Y_test, best_params_lr, best_params_svc, best_params_xgb) -> None:\n",
+    "def train_best_models(X_train, y_train, X_test, y_test, best_params_lr, best_params_svc, best_params_xgb) -> None:\n",
     "    with mlflow.start_run(run_name='Logistic Regression Model'):\n",
     "        mlflow.log_params(best_params_lr)\n",
     "        mlflow.set_tags({\n",
@@ -615,14 +635,14 @@
     "        })\n",
     "\n",
     "        lr = LogisticRegression(**best_params_lr)\n",
-    "        lr.fit(X_train, Y_train)\n",
+    "        lr.fit(X_train, y_train)\n",
     "\n",
     "        y_pred_lr = lr.predict(X_test)\n",
     "\n",
-    "        acc_lr = accuracy_score(Y_test, y_pred_lr)\n",
-    "        precision_lr = precision_score(Y_test, y_pred_lr)\n",
-    "        f1_lr = f1_score(Y_test, y_pred_lr)\n",
-    "        recall_lr = recall_score(Y_test, y_pred_lr)\n",
+    "        acc_lr = accuracy_score(y_test, y_pred_lr)\n",
+    "        precision_lr = precision_score(y_test, y_pred_lr)\n",
+    "        f1_lr = f1_score(y_test, y_pred_lr)\n",
+    "        recall_lr = recall_score(y_test, y_pred_lr)\n",
     "\n",
     "        mlflow.log_metric('acc', acc_lr)\n",
     "        mlflow.log_metric('precision', precision_lr)\n",
@@ -645,14 +665,14 @@
     "        })\n",
     "\n",
     "        svc = SVC(**best_params_svc)\n",
-    "        svc.fit(X_train, Y_train)\n",
+    "        svc.fit(X_train, y_train)\n",
     "\n",
     "        y_pred_svc = svc.predict(X_test)\n",
     "\n",
-    "        acc_svc = accuracy_score(Y_test, y_pred_svc)\n",
-    "        precision_svc = precision_score(Y_test, y_pred_svc)\n",
-    "        f1_svc = f1_score(Y_test, y_pred_svc)\n",
-    "        recall_svc = recall_score(Y_test, y_pred_svc)\n",
+    "        acc_svc = accuracy_score(y_test, y_pred_svc)\n",
+    "        precision_svc = precision_score(y_test, y_pred_svc)\n",
+    "        f1_svc = f1_score(y_test, y_pred_svc)\n",
+    "        recall_svc = recall_score(y_test, y_pred_svc)\n",
     "\n",
     "        mlflow.log_metric('acc', acc_svc)\n",
     "        mlflow.log_metric('precision', precision_svc)\n",
@@ -675,13 +695,13 @@
     "        })\n",
     "\n",
     "        xgb = XGBClassifier(**best_params_xgb)\n",
-    "        xgb.fit(X_train, Y_train)\n",
+    "        xgb.fit(X_train, y_train)\n",
     "        y_pred_xgb = xgb.predict(X_test)\n",
     "\n",
-    "        acc_xgb = accuracy_score(Y_test, y_pred_xgb)\n",
-    "        precision_xgb = precision_score(Y_test, y_pred_xgb)\n",
-    "        f1_xgb = f1_score(Y_test, y_pred_xgb)\n",
-    "        recall_xgb = recall_score(Y_test, y_pred_xgb)\n",
+    "        acc_xgb = accuracy_score(y_test, y_pred_xgb)\n",
+    "        precision_xgb = precision_score(y_test, y_pred_xgb)\n",
+    "        f1_xgb = f1_score(y_test, y_pred_xgb)\n",
+    "        recall_xgb = recall_score(y_test, y_pred_xgb)\n",
     "\n",
     "        mlflow.log_metric('acc', acc_xgb)\n",
     "        mlflow.log_metric('precision', precision_xgb)\n",
