[Docs]: documented the preprocessor

--- a/notebooks/03_training_model.ipynb
+++ b/notebooks/03_training_model.ipynb
@@ -113,7 +113,23 @@
    "source": [
     "## <font color= #bbc28d>• **Preprocesamiento** </font>\n",
     "\n",
-    "Convertimos lo planteado en la libreta de limpieza de datos en una función que limpie y preprocese los datos.  "
+    "Convertimos lo planteado en la libreta de limpieza de datos en una función que limpie y preprocese los datos de la siguiente manera. \n",
+    "\n",
+    "### <font color= #7fb2b5>• **Limpiado de Datos** </font>\n",
+    "\n",
+    "Consiste en una función que toma el dataframe original y:\n",
+    "\n",
+    "- Elimina valores nulos\n",
+    "- Filtra categorías que tengan poca fuerza predictora\n",
+    "- Codifica las variables categóricas binarias\n",
+    "- Codifica las variables categóricas múltiples mediante codificación ordinal\n",
+    "- Realiza un train-test-val split (70-20-10)\n",
+    "\n",
+    "Además, almacena los datos en carpetas dentro del almacenamiento local si el usuario lo indica.\n",
+    "\n",
+    "### <font color= #7fb2b5>• **Preprocesamiento** </font>\n",
+    "\n",
+    "El preprocesamiento de datos retoma los valores obtenidos en la función anterior y aplica una codificación de tipo OneHot, además de una estandarización, con la librería de Scikit-Learn. Estos artefactos son almacenados en almacenamiento local y dentro de MLflow, si el usuario lo indica. "
    ]
   },
   {
