[docs]: further clarified preprocessor

--- a/notebooks/03_training_model.ipynb
+++ b/notebooks/03_training_model.ipynb
@@ -123,13 +123,15 @@
     "- Filtra categorías que tengan poca fuerza predictora\n",
     "- Codifica las variables categóricas binarias\n",
     "- Codifica las variables categóricas múltiples mediante codificación ordinal\n",
-    "- Realiza un train-test-val split (70-20-10)\n",
+    "- Realiza un train-test-val split (70-20-10) con una semilla fija\n",
     "\n",
     "Además, almacena los datos en carpetas dentro del almacenamiento local si el usuario lo indica.\n",
     "\n",
     "### <font color= #7fb2b5>• **Preprocesamiento** </font>\n",
     "\n",
-    "El preprocesamiento de datos retoma los valores obtenidos en la función anterior y aplica una codificación de tipo OneHot, además de una estandarización, con la librería de Scikit-Learn. Estos artefactos son almacenados en almacenamiento local y dentro de MLflow, si el usuario lo indica. "
+    "El preprocesamiento de datos retoma los valores obtenidos en la función anterior y aplica una codificación de tipo OneHot, además de una estandarización estándar, con la librería de Scikit-Learn. Estos artefactos son almacenados en almacenamiento local y dentro de MLflow, si el usuario lo indica. \n",
+    "\n",
+    "El preprocesamiento se aplica antes de correr cada modelo y guarda los artefactos (OneHot y Standard Scaler) asociados a la run. "
    ]
   },
   {
