Revert "Feat/segunda entrega"

--- a/notebooks/00_informe_final.ipynb
+++ b/notebooks/00_informe_final.ipynb
@@ -161,73 +161,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a75782",
-   "metadata": {},
-   "source": [
-    "## <font color= #bbc28d>• **Modelado** </font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9faac06b",
-   "metadata": {},
-   "source": [
-    "Para realizar la tarea de clasificación, se entrenarán los siguientes modelos:\n",
-    "\n",
-    "- Logistic Regression (como baseline)\n",
-    "\n",
-    "- Support Vector Classifier\n",
-    "\n",
-    "- XGBoost"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38aa1263",
-   "metadata": {},
-   "source": [
-    "Elegimos estos modelos ya que nos permiten observar nuestro piso con el modelo clasificatorio más sencillo que hay. Al mismo tiempo, tenemos dos modelos más robustos que siguen siendo relativamente compactos a diferencia de algo como una red neuronal pero que también nos van a dar un mejor rendimiento."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d526779b",
-   "metadata": {},
-   "source": [
-    "## <font color= #bbc28d>• **Resultados** </font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ba097b86",
-   "metadata": {},
-   "source": [
-    "![title](../assets/resultados_modelos.jpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "88f80c88",
-   "metadata": {},
-   "source": [
-    "Hicimos 3 trials, o \"runs\" para cada uno de los 3 modelos para un total de 9 experimentos.\n",
-    "\n",
-    "Sorprendentemente, nuestro modelo *champion* fue el de Regresión Logística. Debido a la sencillez de este modelo, el único hiperparámetro que modificamos entre las runs fue el solver. El *saga* terminó siendo el mejor. Tuvimos un valor de F1-Score máximo de $0.867$\n",
-    "\n",
-    "Aparte del modelo de Regresión Logística, el segundo mejor fue el de Support Vector Classifier con una puntuación máxima de $0.861$. Nuestro modelo XGBoost, originalmente pronosticado como el que sería nuestro mejor modelo, se encuentra en 3er lugar con un score máximo de $0.860$. \n",
-    "\n",
-    "En realidad estos 3 modelos están bastante cerca en rendimiento, con una diferencia de apenas $0.7$% entre el mejor modelo XGBoost y el mejor modelo de Regresión Logística. \n",
-    "\n",
-    "Decidimos usar la **F1-Score** como nuestra métrica objetivo ya que combina la *precision* y el *recall* en un solo número. El valor de *precision* es muy importante para nuestro proyecto ya que nos interesa poder encontrar a todos los alumnos que SI sufren de depresión, para que puedan recibir la ayuda que necesitan. \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "623d8f01",
    "metadata": {},
    "source": [
-    "## <font color= #bbc28d>• **Conclusiones (1era Entrega)** </font>"
+    "## <font color= #bbc28d>• **Conclusiones** </font>"
    ]
   },
   {
